Fixing spacing issues with contact section mob to desktop

--- a/style.css
+++ b/style.css
@@ -167,6 +167,16 @@ nav {
 /**************** 
 * MEDIA QUERIES
 *****************/
+@media only screen and (max-width: 600px) {
+  .contact h5 {
+    font-size: 1.0rem; }
+    .contact h5 svg {
+      margin-right: 10px; } }
+
+@media only screen and (min-width: 600px) {
+  .contact h5 svg {
+    margin-right: 10px; } }
+
 @media only screen and (min-width: 993px) {
   nav {
     height: 100px;
